add nbviewer link

--- a/Python_for_Data_Science.ipynb
+++ b/Python_for_Data_Science.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "45d89ae3",
+   "metadata": {},
+   "source": [
+    "This Jupyter notebook can be viewed on nbviewer at: https://nbviewer.org/github/wahaha1420/Lab-assignments/blob/8aa2d18738a8529fab7440135ab5fc88e10c6a5e/Python_for_Data_Science.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9c0d06af",
